asteria/core/tests/errors/elaboration_errors/term_name_already_defined.asteriacore
id : forall (a : Type). a -> a
   = \{a} -> \x -> x
   ;;

id : forall (a : Type). a -> a
   = \{a} -> \x -> x
   ;;
